<resources>
    <string name="app_name">SecondCourseITIS</string>
    <string name="all_ga">_all_ga_ ▼</string>
    <string name="username_olga">\@_all_ga_</string>
    <string name="likes">Likes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_27">27</string>
    <string name="_4">4</string>
    <string name="accept_changes">accept changes</string>
</resources>
