<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        />
    <ImageButton
        android:id="@+id/btn_add_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_person_add_alt_1_24"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@id/tv_account_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/firstPanel"
        android:layout_marginStart="20dp">
    </ImageButton>

    <TextView
        android:id="@+id/tv_account_name"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/all_ga"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btn_add_person"
        app:layout_constraintTop_toTopOf="@id/firstPanel"
        app:layout_constraintEnd_toStartOf="@id/btn_more"
        >
    </TextView>

    <ImageButton
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_more_vert_24"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_account_name"
        app:layout_constraintTop_toTopOf="@id/firstPanel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp">
    </ImageButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/secondPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile2"
        app:layout_constraintTop_toBottomOf="@id/secondPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_olga"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        >
    </TextView>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_olga"
        android:visibility="invisible"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        android:autofillHints="edit name"
        android:inputType="text">
    </EditText>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirdPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        />

    <TextView
        android:id="@+id/tv_following_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="@id/thirdPanel"
        app:layout_constraintEnd_toStartOf="@id/tv_followers_num"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_followers_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/thirdPanel"
        app:layout_constraintStart_toEndOf="@id/tv_following_num"
        app:layout_constraintEnd_toStartOf="@id/tv_likes_num">
    </TextView>

    <TextView
        android:id="@+id/tv_likes_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_27"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/thirdPanel"
        app:layout_constraintStart_toEndOf="@id/tv_followers_num"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fourthPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".34" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_following_num"
        app:layout_constraintEnd_toEndOf="@id/tv_following_num"
        app:layout_constraintTop_toTopOf="@id/fourthPanel"
        />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_followers_num"
        app:layout_constraintEnd_toEndOf="@id/tv_followers_num"
        app:layout_constraintTop_toTopOf="@id/fourthPanel"
        />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_likes_num"
        app:layout_constraintEnd_toEndOf="@id/tv_likes_num"
        app:layout_constraintTop_toTopOf="@id/fourthPanel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifthPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".38" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/edit_profile"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/btn_saved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fifthPanel"
        />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/accept_changes"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:backgroundTint="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/btn_saved"
        app:layout_constraintEnd_toEndOf="@id/btn_edit"
        app:layout_constraintStart_toStartOf="@id/btn_edit"
        app:layout_constraintTop_toTopOf="@id/fifthPanel"
        />

    <ImageButton
        android:id="@+id/btn_saved"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_turned_in_not_24"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/btn_edit"
        app:layout_constraintTop_toTopOf="@id/fifthPanel"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sixthPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".48" />


    <ImageButton
        android:id="@+id/btn_videos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_horizontal_distribute_24"
        app:layout_constraintTop_toTopOf="@id/sixthPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/onePanel"
        />

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_favorite_border_24"
        app:layout_constraintTop_toTopOf="@id/sixthPanel"
        app:layout_constraintStart_toEndOf="@id/onePanel"
        app:layout_constraintEnd_toStartOf="@id/twoPanel"
        />

    <ImageButton
        android:id="@+id/btn_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_lock_24"
        app:layout_constraintTop_toTopOf="@id/sixthPanel"
        app:layout_constraintStart_toEndOf="@id/twoPanel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sevenPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eightPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".76" />

    <ImageView
        android:id="@+id/iv_first_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/photo1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/sevenPanel"
        app:layout_constraintBottom_toBottomOf="@id/eightPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/onePanel"
        />

    <ImageView
        android:id="@+id/iv_second_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/photo2"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toTopOf="@id/sevenPanel"
        app:layout_constraintBottom_toBottomOf="@id/eightPanel"
        app:layout_constraintStart_toEndOf="@id/iv_first_photo"
        app:layout_constraintEnd_toStartOf="@id/twoPanel"/>

    <ImageView
        android:id="@+id/iv_third_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/photo3"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toTopOf="@id/sevenPanel"
        app:layout_constraintBottom_toBottomOf="@id/eightPanel"
        app:layout_constraintStart_toEndOf="@id/twoPanel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ninePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".92" />

    <ImageView
        android:id="@+id/iv_four_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/photo4"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="@id/eightPanel"
        app:layout_constraintBottom_toBottomOf="@id/ninePanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/onePanel"/>

    <ImageView
        android:id="@+id/iv_five_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/photo5"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="@id/eightPanel"
        app:layout_constraintBottom_toBottomOf="@id/ninePanel"
        app:layout_constraintStart_toEndOf="@id/iv_four_photo"
        app:layout_constraintEnd_toStartOf="@id/twoPanel"/>


    <ImageView
        android:id="@+id/iv_six_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/photo8"
        app:layout_constraintBottom_toBottomOf="@id/ninePanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/twoPanel"
        app:layout_constraintTop_toTopOf="@id/eightPanel"/>

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_home_24"
        android:layout_marginStart="30dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="@id/ninePanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_home"
        app:layout_constraintTop_toTopOf="@id/ninePanel"
        app:layout_constraintVertical_bias="0.529" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_add_24"
        app:layout_constraintTop_toTopOf="@id/ninePanel"
        app:layout_constraintStart_toEndOf="@id/btn_search"
        app:layout_constraintEnd_toStartOf="@id/btn_inbox"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_outline_move_to_inbox_24"
        app:layout_constraintTop_toTopOf="@id/ninePanel"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintEnd_toStartOf="@id/btn_me"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_person_24"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_inbox"
        app:layout_constraintTop_toTopOf="@id/ninePanel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/twoPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".66" />


</androidx.constraintlayout.widget.ConstraintLayout>
